fixed body shifting

--- a/src/frontend/components/app_assets/app_assets.css
+++ b/src/frontend/components/app_assets/app_assets.css
@@ -18,6 +18,7 @@ body {
     margin-right: 50px;
     height: 100%;
     overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 
